--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,1 +1,26 @@
-<h2>Hello Friends</h2>
+<div class="header-nav mt-5 mb-5 d-flex flex-wrap justify-content-between align-items-center">
+	<h1>Movie Logger</h1>
+	<nav class="nav nav-pills nav-fill">
+		<a class="header-nav-item nav-link active" href="/home">Home</a>
+		<li class="nav-item dropdown">
+			<a class=" header-nav-item nav-link dropdown-toggle" data-bs-toggle="dropdown">All</a>
+			<ul class="dropdown-menu">
+			  <li><a class="dropdown-item" href="/actors">Actors</a></li>
+			  <li><a class="dropdown-item" href="/directors">Directors</a></li>
+			  <li><a class="dropdown-item" href="/genre">Genre</a></li>
+			</ul>
+		  </li>
+		<li class="nav-item dropdown">
+			<a class=" header-nav-item nav-link dropdown-toggle" data-bs-toggle="dropdown">Following</a>
+			<ul class="dropdown-menu">
+			  <li><a class="dropdown-item" href="/following/actors">Actors</a></li>
+			  <li><a class="dropdown-item" href="/following/directors">Directors</a></li>
+			  <li><a class="dropdown-item" href="/following/genre">Genre</a></li>
+			</ul>
+		  </li>
+		<a class="header-nav-item nav-link" href="/reviews">Reviews</a>
+	</nav>
+</div>
+
+
+
