Some Admin Side Views

--- a/src/public/styles/main.css
+++ b/src/public/styles/main.css
@@ -1,6 +1,9 @@
 @import './shared/vars.css';
 @import './shared/fonts.css';
 @import './shared/header.css';
+@import './shared/homeUser.css';
+@import './shared/adminMovie.css';
+@import './shared/formAdd.css';
 
 *,
 *::before,
