--- a/src/views/partials/headerHome.ejs
+++ b/src/views/partials/headerHome.ejs
@@ -16,21 +16,21 @@
 		</form>
 	</div>
 	<nav class="nav nav-pills nav-fill">
-		<a class="header-nav-item nav-link active" href="/home">Home</a>
+		<a class="header-nav-item nav-link active" href="/user/home">Home</a>
 		<li class="nav-item dropdown">
 			<a class=" header-nav-item nav-link dropdown-toggle" data-bs-toggle="dropdown">All</a>
 			<ul class="dropdown-menu">
-			  <li><a class="dropdown-item" href="/actors">Actors</a></li>
-			  <li><a class="dropdown-item" href="/directors">Directors</a></li>
-			  <li><a class="dropdown-item" href="/genre">Genre</a></li>
+			  <li><a class="dropdown-item" href="/user/actors">Actors</a></li>
+			  <li><a class="dropdown-item" href="/user/directors">Directors</a></li>
+			  <li><a class="dropdown-item" href="/user/genre">Genre</a></li>
 			</ul>
 		  </li>
 		<li class="nav-item dropdown">
 			<a class=" header-nav-item nav-link dropdown-toggle" data-bs-toggle="dropdown">Following</a>
 			<ul class="dropdown-menu">
-			  <li><a class="dropdown-item" href="/following/actors">Actors</a></li>
-			  <li><a class="dropdown-item" href="/following/directors">Directors</a></li>
-			  <li><a class="dropdown-item" href="/following/genre">Genre</a></li>
+			  <li><a class="dropdown-item" href="/user/following/actors">Actors</a></li>
+			  <li><a class="dropdown-item" href="/user/following/directors">Directors</a></li>
+			  <li><a class="dropdown-item" href="/user/following/genre">Genre</a></li>
 			</ul>
 		  </li>
 		<a class="header-nav-item nav-link" href="/reviews">Reviews</a>
