--- a/src/views/admin/actor.ejs
+++ b/src/views/admin/actor.ejs
@@ -1,5 +1,5 @@
 <form method="GET" class="d-flex">
-	<input class="form-control" type="text" style="margin-right: 1rem; background-color: var(--color-text-light);" name="title">
+	<input class="form-control" type="text" style="margin-right: 1rem; background-color: var(--color-text-light);" name="title" placeholder="Search Actor">
 	<button class="btn btn-primary" type="submit">Search</button>
 </form>
 
