Movie Show Page Done

--- a/src/public/styles/main.css
+++ b/src/public/styles/main.css
@@ -4,6 +4,7 @@
 @import './shared/homeUser.css';
 @import './shared/adminMovie.css';
 @import './shared/formAdd.css';
+@import './shared/showMovie.css';
 
 *,
 *::before,
