--- a/src/views/admin/movie.ejs
+++ b/src/views/admin/movie.ejs
@@ -21,7 +21,7 @@
 				>
 					See More
 				</button>
-				<a href="#" class="movie-see-more btn btn-primary"
+				<a href="/admin/showMovie" class="movie-see-more btn btn-primary"
 					>Movie Page</a
 				>
 			</div>
