--- a/src/views/admin/showMovie.ejs
+++ b/src/views/admin/showMovie.ejs
@@ -13,26 +13,29 @@
    <div class="movie-details-grid">
       <table class="movie-details-table">
          <tr>
-            <td class="table-cell"><div class="movie-details-label">Title:</div></td>
+            <td class="table-cell-alt"><div class="movie-details-label">Title</div></td>
             <td  class="table-cell"><div>Dark Knight</div></td>
          </tr>
          <tr>
-            <td class="table-cell"><div class="movie-details-label">Release Date:</div></td>
+            <td class="table-cell-alt"><div class="movie-details-label">Release Date</div></td>
             <td class="table-cell"><div>10/10/2009</div></td>
 
          </tr>
          <tr>
-            <td class="table-cell"><div class="movie-details-label">Runtime:</div></td>
+            <td class="table-cell-alt"><div class="movie-details-label">Runtime</div></td>
             <td class="table-cell"><div>120</div></td>
+         </tr>
+         <tr>
+            <td class="table-cell-alt"><div class="movie-details-label">Genre</div></td>
+            <td class="table-cell"><div>Crime</div></td>
+         </tr>
+         <tr>
+            <td class="table-cell-alt"><div class="movie-details-label">Description</div></td>
+            <td class="table-cell"><div>Very nice movie. Has good potential Hsbh as dasj ashdjak dhaskdh askjhsdjahs hasdja dahjdh asjdh as </div></td>
 
          </tr>
          <tr>
-            <td class="table-cell"><div class="movie-details-label">Description:</div></td>
-            <td class="table-cell"><div>Very nice movie. Has good potential </div></td>
-
-         </tr>
-         <tr>
-            <td class="table-cell"><div class="movie-details-label">Rating:</div></td>
+            <td class="table-cell-alt"><div class="movie-details-label">Rating</div></td>
             <td class="table-cell"><div>5</div></td>
          </tr>
       </table>
