--- a/src/public/styles/shared/adminShowMovie.css
+++ b/src/public/styles/shared/adminShowMovie.css
@@ -1,7 +1,16 @@
 :root {
 	--movie-cover-width: 200px;
+	--movie-cover-width-small: 175px;
 	--movie-cover-width-large: 250px;
 	--movie-cover-aspect-ratio: 0.75;
+}
+
+.movie-cover-small {
+	width: var(--movie-cover-width-small);
+	height: calc(
+		var(--movie-cover-width-small) / var(--movie-cover-aspect-ratio)
+	);
+	box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 
 .movie-cover {
@@ -46,12 +55,30 @@
 } */
 
 .movie-details-table {
-	border: 1px solid var(--color-text-light);
+	border-collapse: collapse;
+	min-width: 400px;
+	border-radius: 10px;
+	overflow: hidden;
+	box-shadow: 0 0 20px black;
+}
+
+.movie-details-table tr {
+	border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+}
+
+.movie-details-table tr:last-child {
+	border-bottom: none;
 }
 
 .table-cell {
-	padding: 1rem;
-	border: 1px solid var(--color-text-light);
+	background-color: rgb(78, 100, 120);
+	padding: 12px 15px;
+	max-width: 500px;
+}
+
+.table-cell-alt {
+	background-color: rgb(41, 129, 180);
+	padding: 12px 15px;
 }
 
 .carousel-movie {
@@ -61,4 +88,11 @@
 .movie-details-label {
 	font-size: 1.2rem;
 	font-weight: 500;
+}
+
+.director-movie {
+	border-radius: 20px;
+}
+.director-movie:hover {
+	border: 3px solid black;
 }
