--- a/src/public/styles/shared/movieGrid.css
+++ b/src/public/styles/shared/movieGrid.css
@@ -7,6 +7,15 @@
 	align-items: flex-start;
 }
 
+.grid-container-small {
+	margin-top: 4rem;
+	display: grid;
+	justify-content: center;
+	grid-gap: 3rem;
+	grid-template-columns: repeat(auto-fill, 200px);
+	align-items: flex-start;
+}
+
 .movie-card {
 	border-radius: 0.5rem;
 	background-color: var(--color-text-light);
