--- a/src/views/admin/director.ejs
+++ b/src/views/admin/director.ejs
@@ -21,7 +21,7 @@
 				>
 					See More
 				</button>
-				<a href="#" class="movie-see-more btn btn-primary"
+				<a href="/admin/showDirector" class="movie-see-more btn btn-primary"
 					>Director</a
 				>
 			</div>
