--- a/src/views/layouts/user.ejs
+++ b/src/views/layouts/user.ejs
@@ -25,6 +25,7 @@
 			crossorigin="anonymous"
 		></script>
 		<script defer src="/js/tabs.js"></script>
+		<script defer src="/js/followToggle.js"></script>
 		<title>Movie Logger</title>
 	</head>
 	<body>
