--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -7,7 +7,7 @@
 			<ul class="dropdown-menu">
 			  <li><a class="dropdown-item" href="/user/actors">Actors</a></li>
 			  <li><a class="dropdown-item" href="/user/directors">Directors</a></li>
-			  <li><a class="dropdown-item" href="/user/genre">Genre</a></li>
+			  <li><a class="dropdown-item" href="/user/genres">Genre</a></li>
 			</ul>
 		  </li>
 		<li class="nav-item dropdown">
@@ -15,7 +15,7 @@
 			<ul class="dropdown-menu">
 			  <li><a class="dropdown-item" href="/user/following/actors">Actors</a></li>
 			  <li><a class="dropdown-item" href="/user/following/directors">Directors</a></li>
-			  <li><a class="dropdown-item" href="/user/following/genre">Genre</a></li>
+			  <li><a class="dropdown-item" href="/user/following/genres">Genre</a></li>
 			</ul>
 		  </li>
 		<a class="header-nav-item nav-link" href="/reviews">Reviews</a>
