--- a/src/views/admin/addDirector.ejs
+++ b/src/views/admin/addDirector.ejs
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class="d-flex flex-row-reverse">
-            <button type="submit" class="form-item-movie btn btn-primary">Submit</button>
+            <button type="submit" class="form-item-movie btn btn-primary">Create</button>
         </div>
     </form>
 </div>
