--- a/src/views/admin/editActor.ejs
+++ b/src/views/admin/editActor.ejs
@@ -1,5 +1,5 @@
 <div class="form-container">
-    <h2> Add a New Actor</h2>
+    <h2>Edit Actor</h2>
     <form method="post" enctype="multipart/form-data" class="mt-5">
         <div class="row">
             <div class="form-item-movie col">
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="d-flex flex-row-reverse">
-            <button type="submit" class="form-item-movie btn btn-primary">Create</button>
+            <button type="submit" class="form-item-movie btn btn-primary">Edit</button>
         </div>
     </form>
 </div>
