--- a/src/views/admin/editDirector.ejs
+++ b/src/views/admin/editDirector.ejs
@@ -1,5 +1,5 @@
 <div class="form-container">
-    <h2> Add a New Actor</h2>
+    <h2>Edit  Director</h2>
     <form method="post" enctype="multipart/form-data" class="mt-5">
         <div class="row">
             <div class="form-item-movie col">
@@ -7,11 +7,7 @@
                 <input class="form-control form-input-movie" type="text" name="name" placeholder="Name">
             </div>
             <div class="form-item-movie col">
-                <label>Age</label>
-                <input class="form-control form-input-movie" type="number" name="age" placeholder="Age">
-            </div>
-            <div class="form-item-movie col">
-                <label>Actor Image</label>
+                <label>Director Image</label>
                 <input type="file" class="form-control form-input-movie" name="coverImg">
             </div>
         </div>
@@ -22,7 +18,7 @@
             </div>
         </div>
         <div class="d-flex flex-row-reverse">
-            <button type="submit" class="form-item-movie btn btn-primary">Create</button>
+            <button type="submit" class="form-item-movie btn btn-primary">Edit</button>
         </div>
     </form>
 </div>
