--- a/src/views/admin/editMovie.ejs
+++ b/src/views/admin/editMovie.ejs
@@ -1,5 +1,5 @@
 <div class="form-container">
-    <h2> Add a New Movie</h2>
+    <h2> Edit Movie</h2>
     <form method="post" enctype="multipart/form-data" class="mt-5">
         <div class="row">
             <div class="form-item-movie col">
@@ -49,7 +49,7 @@
         </div>
         
         <div class="d-flex flex-row-reverse">
-            <button type="submit" class="form-item-movie btn btn-primary">Create</button>
+            <button type="submit" class="form-item-movie btn btn-primary">Edit</button>
         </div>
     </form>
 </div>
