--- a/src/views/admin/showActor.ejs
+++ b/src/views/admin/showActor.ejs
@@ -2,12 +2,12 @@
     <div>
        <img class="movie-cover" src="https://m.media-amazon.com/images/M/MV5BMTMxNTMwODM0NF5BMl5BanBnXkFtZTcwODAyMTk2Mw@@._V1_FMjpg_UX1000_.jpg">
        <div class="mt-3 btn-row-movie d-flex">
-          <a class="btn-movie btn btn-danger">
-             Delete
-          </a>
-          <a class="btn-movie btn btn-primary">
-             Edit
-          </a>
+         <button type="button" class="btn-movie btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Delete
+          </button>
+         <a href="/admin/editActor" class="btn-movie btn btn-primary">
+            Edit
+         </a>
        </div>
     </div>
     <div class="movie-details-grid align-self-center">
@@ -39,4 +39,25 @@
          <a href="#"><img class="director-movie movie-cover-small" src="https://i.pinimg.com/originals/d8/b6/f4/d8b6f4918c3d0e6ebc8440f8ab6c58a2.jpg"></a>
        <% } %>
     </div>
+ </div>
+
+ <!-- delete modal -->
+<div style="color: var(--color-background-dark)" class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel">
+   <div class="modal-dialog">
+     <div class="modal-content">
+       <div class="modal-header">
+         <h5 class="modal-title" id="exampleModalLabel">Delete Actor</h5>
+         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+       </div>
+       <div class="modal-body">
+         Are you sure you want to delete this actor?
+       </div>
+       <div class="modal-footer">
+         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+         <form method="post">
+            <button type="submit" class="btn btn-danger">Delete</button>
+         </form>
+       </div>
+     </div>
+   </div>
  </div>
