--- a/src/views/admin/showMovie.ejs
+++ b/src/views/admin/showMovie.ejs
@@ -2,10 +2,10 @@
    <div>
       <img class="movie-cover" src="https://m.media-amazon.com/images/M/MV5BMTMxNTMwODM0NF5BMl5BanBnXkFtZTcwODAyMTk2Mw@@._V1_FMjpg_UX1000_.jpg">
       <div class="mt-3 btn-row-movie d-flex">
-         <a class="btn-movie btn btn-danger">
+         <button type="button" class="btn-movie btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
             Delete
-         </a>
-         <a class="btn-movie btn btn-primary">
+          </button>
+         <a href="/admin/editMovie" class="btn-movie btn btn-primary">
             Edit
          </a>
       </div>
@@ -42,6 +42,8 @@
    </div>
 </div>
 <hr class="mt-5 mb-5">
+
+<!-- cast carousel -->
 <div class="d-flex cast-director justify-content-around">
    <div style="margin-right: 7rem;">
       <h2>Cast</h2>
@@ -77,6 +79,8 @@
    </div>
 </div>
 <hr class="mt-5 mb-5">
+
+<!-- reviews -->
 <h2>Reviews</h2>
 <ul class="mt-3 list-group">
    <li class="list-group-item d-flex justify-content-between align-items-start">
@@ -101,3 +105,24 @@
      <span class="badge bg-primary rounded-pill">3</span>
    </li>
 </ul>
+
+<!-- delete modal -->
+<div style="color: var(--color-background-dark)" class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel">
+   <div class="modal-dialog">
+     <div class="modal-content">
+       <div class="modal-header">
+         <h5 class="modal-title" id="exampleModalLabel">Delete Movie</h5>
+         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+       </div>
+       <div class="modal-body">
+         Are you sure you want to delete this movie?
+       </div>
+       <div class="modal-footer">
+         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+         <form method="post">
+            <button type="submit" class="btn btn-danger">Delete</button>
+         </form>
+       </div>
+     </div>
+   </div>
+ </div>
