--- a/src/views/users/director.ejs
+++ b/src/views/users/director.ejs
@@ -1,7 +1,10 @@
+<h1 style="text-align: center;">Directors</h1>
+<br>
 <form method="GET" class="d-flex">
 	<input class="form-control" type="text" style="margin-right: 1rem; background-color: var(--color-text-light);" name="title" placeholder="Search Director">
 	<button class="btn btn-primary" type="submit">Search</button>
 </form>
+<br>
 
 <div class="grid-container">
 	<% for(let i=0; i<10; i++) { %>
@@ -13,28 +16,19 @@
 		/>
 		<div class="text-center card-body">
 			<h5 class="card-title movie-title">Card title</h5>
-			<div class="movie-btn-grid">
-				<button
-					class="btn btn-primary"
-					data-bs-toggle="collapse"
-					data-bs-target="#collapse<%= i %>"
+			<div class="follow-grid">
+				<form method="post">
+					<button type="submit" class="follow-button btn btn-primary">
+						Follow
+					</button>
+				</form>
+				<a href="/user/showActor" class="btn btn-primary"
+					>Director Page</a
 				>
-					See More
-				</button>
-				<a href="/admin/showDirector" class="btn btn-primary"
-					>Director</a
-				>
-			</div>
-			<div class="collapse text-primary mt-3" id="collapse<%= i %>">
-				<div class="card-body">
-					Name: Atlee
-					<br />
-					Favourite Genre: Drama
-				</div>
 			</div>
 		</div>
 	</div>
 	<% } %>
 </div>
 
-<a class="fixed-button btn" href="/admin/addDirector"><i class="plus-sign fas fa-plus"></i></a>
+<a class="fixed-button btn" href="/admin/addActor"><i class="plus-sign fas fa-plus"></i></a>
