Added: Views done completely

--- a/src/views/partials/headerHome.ejs
+++ b/src/views/partials/headerHome.ejs
@@ -33,7 +33,7 @@
 			  <li><a class="dropdown-item" href="/user/following/genres">Genre</a></li>
 			</ul>
 		  </li>
-		<a class="header-nav-item nav-link" href="/reviews">Reviews</a>
+		<a class="header-nav-item nav-link" href="/user/reviews">Reviews</a>
 	</nav>
 </div>
 
