--- a/src/views/users/home.ejs
+++ b/src/views/users/home.ejs
@@ -16,9 +16,7 @@
 				>
 					See More
 				</button>
-				<a href="#" class="movie-see-more btn btn-primary"
-					>Movie Page</a
-				>
+				<a href="/user/showMovie" class="movie-see-more btn btn-primary">Movie Page</a>
 			</div>
 			<div class="collapse text-primary mt-3" id="collapse<%= i %>">
 				<div class="card-body">
