--- a/src/views/users/director.ejs
+++ b/src/views/users/director.ejs
@@ -22,7 +22,7 @@
 						Follow
 					</button>
 				</form>
-				<a href="/user/showActor" class="btn btn-primary"
+				<a href="/user/showDirector" class="btn btn-primary"
 					>Director Page</a
 				>
 			</div>
