--- a/src/views/admin/actor.ejs
+++ b/src/views/admin/actor.ejs
@@ -4,15 +4,15 @@
 </form>
 
 <div class="grid-container">
-	<% for(let i=0; i<10; i++) { %>
+	<% details.forEach((actor) => { %>
 	<div class="movie-card card">
 		<img
-			src="https://i.pinimg.com/originals/d8/b6/f4/d8b6f4918c3d0e6ebc8440f8ab6c58a2.jpg"
+			src="/api/images/<%= actor.coverImage %>"
 			class="card-img-top"
 			alt="..."
 		/>
 		<div class="text-center card-body">
-			<h5 class="card-title movie-title">Card title</h5>
+			<h5 class="card-title movie-title"><%= actor.name %></h5>
 			<div class="movie-btn-grid">
 				<button
 					class="btn btn-primary"
@@ -21,20 +21,17 @@
 				>
 					See More
 				</button>
-				<a href="/admin/showActor" class="btn btn-primary"
-					>Actor Page</a
-				>
+				<a href="/api/admin/actor/<%= actor.id %>" class="btn btn-primary">Actor Page</a>
 			</div>
 			<div class="collapse text-primary mt-3" id="collapse<%= i %>">
 				<div class="card-body">
-					Name: Vijay
-					<br />
-					Age: 42
+					Age: <%= actor.age %>
+					Best Movie: <%= actor.bestMovie %>
 				</div>
 			</div>
 		</div>
 	</div>
-	<% } %>
+	<% }) %>
 </div>
 
-<a class="fixed-button btn" href="/admin/addActor"><i class="plus-sign fas fa-plus"></i></a>
+<a class="fixed-button btn" href="/api/admin/actor/add"><i class="plus-sign fas fa-plus"></i></a>
