--- a/src/views/admin/addDirector.ejs
+++ b/src/views/admin/addDirector.ejs
@@ -1,6 +1,6 @@
 <div class="form-container">
     <h2> Add a New Director</h2>
-    <form method="post" enctype="multipart/form-data" class="mt-5">
+    <form method="post" action="/api/admin/director/add" enctype="multipart/form-data" class="mt-5">
         <div class="row">
             <div class="form-item-movie col">
                 <label>Name</label>
