--- a/src/views/admin/editDirector.ejs
+++ b/src/views/admin/editDirector.ejs
@@ -1,10 +1,10 @@
 <div class="form-container">
     <h2>Edit  Director</h2>
-    <form method="post" enctype="multipart/form-data" class="mt-5">
+    <form method="post" action="/api/admin/director/edit/<%= details.id %>?_method=PUT" enctype="multipart/form-data" class="mt-5">
         <div class="row">
             <div class="form-item-movie col">
                 <label>Name</label>
-                <input class="form-control form-input-movie" type="text" name="name" placeholder="Name">
+                <input class="form-control form-input-movie" type="text" name="name" value="<%= details.name %>" placeholder="Name">
             </div>
             <div class="form-item-movie col">
                 <label>Director Image</label>
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="form-item-movie col">
                 <label class="form-label">Bio</label>
-                <textarea class="form-control form-input-movie" name="bio" rows="3"></textarea>
+                <textarea class="form-control form-input-movie" name="bio" value="<%= details.name %>" rows="3"></textarea>
             </div>
         </div>
         <div class="d-flex flex-row-reverse">
