--- a/src/views/admin/showDirector.ejs
+++ b/src/views/admin/showDirector.ejs
@@ -1,11 +1,11 @@
 <div class="mt-5 d-flex justify-content-evenly">
     <div>
-       <img class="movie-cover" src="https://m.media-amazon.com/images/M/MV5BMTMxNTMwODM0NF5BMl5BanBnXkFtZTcwODAyMTk2Mw@@._V1_FMjpg_UX1000_.jpg">
+       <img class="movie-cover" src="/api/images/<%= details.coverImage %>">
        <div class="mt-3 btn-row-movie d-flex">
          <button type="button" class="btn-movie btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
             Delete
           </button>
-         <a href="/admin/editDirector" class="btn-movie btn btn-primary">
+         <a href="/api/admin/director/edit/<%= details.id %>" class="btn-movie btn btn-primary">
             Edit
          </a>
        </div>
@@ -14,16 +14,16 @@
        <table class="movie-details-table">
           <tr>
              <td class="table-cell-alt"><div class="movie-details-label">Name</div></td>
-             <td  class="table-cell"><div>Dark Knight</div></td>
+             <td  class="table-cell"><div><%= details.name %></div></td>
           </tr>
           <tr>
              <td class="table-cell-alt"><div class="movie-details-label">Favourite Genre</div></td>
-             <td class="table-cell"><div>10/10/2009</div></td>
+             <td class="table-cell"><div><%= details.favouriteGenre %></div></td>
  
           </tr>
           <tr>
              <td class="table-cell-alt"><div class="movie-details-label">Bio</div></td>
-             <td class="table-cell"><div>Great Man</div></td>
+             <td class="table-cell"><div><%= details.bio %></div></td>
  
           </tr>
        </table>
@@ -35,9 +35,9 @@
  <div>
     <h2>Movies by Director</h2>
     <div class="grid-container-small">
-       <% for(let i=0; i<5; i++) { %>
-         <a href="#"><img class="director-movie movie-cover-small" src="https://i.pinimg.com/originals/d8/b6/f4/d8b6f4918c3d0e6ebc8440f8ab6c58a2.jpg"></a>
-       <% } %>
+       <% details.movies.forEach((movie) => { %>
+         <a href="#"><img class="director-movie movie-cover-small" src="/api/images/<%= movie.coverImage %>"></a>
+       <% }) %>
     </div>
  </div>
 
@@ -54,7 +54,7 @@
        </div>
        <div class="modal-footer">
          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-         <form method="post">
+         <form action="/api/admin/director/delete/<%= details.id %>?_method=DELETE" method="post">
             <button type="submit" class="btn btn-danger">Delete</button>
          </form>
        </div>
