--- a/src/views/partials/adminHeader.ejs
+++ b/src/views/partials/adminHeader.ejs
@@ -1,9 +1,9 @@
 <div class="header-nav mt-5 mb-5 d-flex flex-wrap justify-content-between align-items-center">
 	<h1>Movie Logger</h1>
 	<nav class="nav nav-pills nav-fill">
-		<a class="header-nav-item nav-link active" href="/admin/movies">Movies</a>
-        <a class="header-nav-item nav-link" href="/admin/actors">Actors</a>
-        <a class="header-nav-item nav-link" href="/admin/directors">Directors</a>
+		<a class="header-nav-item nav-link active" href="/api/admin/movie/all">Movies</a>
+        <a class="header-nav-item nav-link" href="/api/admin/actor/all">Actors</a>
+        <a class="header-nav-item nav-link" href="/api/admin/director/all">Directors</a>
 	</nav>
 </div>
 
