--- a/src/views/admin/addMovie.ejs
+++ b/src/views/admin/addMovie.ejs
@@ -1,6 +1,6 @@
 <div class="form-container">
     <h2> Add a New Movie</h2>
-    <form method="post" enctype="multipart/form-data" class="mt-5">
+    <form method="post" action="/api/admin/movie/add" enctype="multipart/form-data" class="mt-5">
         <div class="row">
             <div class="form-item-movie col">
                     <label>Title</label>
@@ -9,9 +9,9 @@
             <div class="col form-item-movie">
                 <label>Director</label>
                 <select  class="form-select form-input-movie" name="director">
-                    <option value="1" selected>One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
+                    <% details.directors.forEach((director) => { %>
+                        <option value="<%= director.name %>"><%= director.name %></option>
+                    <% }) %>
                 </select>
             </div>
         </div>
@@ -23,11 +23,9 @@
             <div class="col form-item-movie">
                 <label>Cast</label>
                 <select  class="form-control form-input-movie mselect" name="cast" multiple>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
-                    <option value="4">Four</option>
-                    <option value="5">Five</option>
+                    <% details.actors.forEach((actor) => { %>
+                        <option value="<%= actor.name %>"><%= actor.name %></option>
+                    <% }) %>
                 </select>
             </div>
         </div>
