--- a/src/views/admin/editDirector.ejs
+++ b/src/views/admin/editDirector.ejs
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="form-item-movie col">
                 <label class="form-label">Bio</label>
-                <textarea class="form-control form-input-movie" name="bio" value="<%= details.name %>" rows="3"></textarea>
+                <textarea class="form-control form-input-movie" name="bio" value="<%= details.bio %>" rows="3"></textarea>
             </div>
         </div>
         <div class="d-flex flex-row-reverse">
