--- a/src/views/admin/movie.ejs
+++ b/src/views/admin/movie.ejs
@@ -4,15 +4,15 @@
 </form>
 
 <div class="grid-container">
-	<% for(let i=0; i<10; i++) { %>
+	<% details.forEach((movie) => { %>
 	<div class="movie-card card">
 		<img
-			src="https://i.pinimg.com/originals/d8/b6/f4/d8b6f4918c3d0e6ebc8440f8ab6c58a2.jpg"
+			src="/api/images/<%= movie.coverImage %>"
 			class="card-img-top"
 			alt="..."
 		/>
 		<div class="text-center card-body">
-			<h5 class="card-title movie-title">Card title</h5>
+			<h5 class="card-title movie-title"><%= movie.title %></h5>
 			<div class="movie-btn-grid">
 				<button
 					class="btn btn-primary"
@@ -21,20 +21,18 @@
 				>
 					See More
 				</button>
-				<a href="/admin/showMovie" class="btn btn-primary"
-					>Movie Page</a
-				>
+				<a href="/api/admin/movie/<%= movie.id %>" class="btn btn-primary">Movie Page</a>
 			</div>
 			<div class="collapse text-primary mt-3" id="collapse<%= i %>">
 				<div class="card-body">
-					Actor: Vijay
+					Director: <%= movie.director %>
 					<br />
-					Director: Atle
+					Rating: <%= movie.rating %>
 				</div>
 			</div>
 		</div>
 	</div>
-	<% } %>
+	<% }) %>
 </div>
 
-<a class="fixed-button btn" href="/admin/addMovie"><i class="plus-sign fas fa-plus"></i></a>
+<a class="fixed-button btn" href="/api/admin/movie/add"><i class="plus-sign fas fa-plus"></i></a>
