--- a/src/views/admin/movie.ejs
+++ b/src/views/admin/movie.ejs
@@ -17,13 +17,13 @@
 				<button
 					class="btn btn-primary"
 					data-bs-toggle="collapse"
-					data-bs-target="#collapse<%= i %>"
+					data-bs-target="#collapse<%= movie.id %>"
 				>
 					See More
 				</button>
 				<a href="/api/admin/movie/<%= movie.id %>" class="btn btn-primary">Movie Page</a>
 			</div>
-			<div class="collapse text-primary mt-3" id="collapse<%= i %>">
+			<div class="collapse text-primary mt-3" id="collapse<%= movie.id %>">
 				<div class="card-body">
 					Director: <%= movie.director %>
 					<br />
