--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -1,5 +1,5 @@
 <main class="form-signin">
-	<form action="/register" method="POST">
+	<form action="/api/register" method="POST">
 		<h1 class="mb-4">Movie Logger</h1>
 		<div class="form-floating">
 			<input
