--- a/src/views/users/followingActors.ejs
+++ b/src/views/users/followingActors.ejs
@@ -1,13 +1,13 @@
 <h2 style="text-align: center;">Following Actors</h2>
 <div class="grid-container-small">
-    <% for(let i=0; i<5; i++) { %>
+    <% details.forEach((actor) => { %>
         <div>
-            <a href="#"><img class="director-movie movie-cover" src="https://i.pinimg.com/originals/d8/b6/f4/d8b6f4918c3d0e6ebc8440f8ab6c58a2.jpg"></a>
+            <a href="/api/user/actor/<%= actor.id %>"><img class="director-movie movie-cover" src="/api/images/<%= actor.coverImage %>"></a>
             <form class="mt-4 d-flex justify-content-center" method="post">
                 <button type="submit" class="follow-button btn btn-primary">
                     Unfollow
                 </button>
             </form>
         </div>
-    <% } %>
+    <% }) %>
 </div>
