--- a/src/views/users/followingGenres.ejs
+++ b/src/views/users/followingGenres.ejs
@@ -1,9 +1,9 @@
 <h2 style="text-align: center;">Following Genres</h2>
 <br>
 <br>
-<% for(let i=0; i<2; i++) { %>
+<% details.forEach((genre) => { %>
     <div class="d-flex justify-content-between">
-        <h3>Genre<%= i %></h3>
+        <h3><%= genre.name %></h3>
         <form  method="post">
             <button type="submit" class="follow-button btn btn-primary">
                 Unfollow
@@ -12,13 +12,13 @@
     </div>
     <hr>
     <div class="grid-container-small">
-        <% for(let j=0; j<5; j++) { %>
+        <% genre.movies.forEach((movie) => { %>
             <div>
-                <a href="#"><img class="director-movie movie-cover" src="https://i.pinimg.com/originals/d8/b6/f4/d8b6f4918c3d0e6ebc8440f8ab6c58a2.jpg"></a>
+                <a href="/api/user/movie/<%= movie.id %>"><img class="director-movie movie-cover" src="/api/images/<%= movie.coverImage %>"></a>
             </div>
-        <% } %>
+        <% }) %>
     </div>
     <br>
     <br>
     <br>
-<% } %>
+<% }) %>
