--- a/src/views/users/showDirector.ejs
+++ b/src/views/users/showDirector.ejs
@@ -1,6 +1,6 @@
 <div class="mt-5 d-flex justify-content-evenly">
     <div>
-       <img class="movie-cover" src="https://m.media-amazon.com/images/M/MV5BMTMxNTMwODM0NF5BMl5BanBnXkFtZTcwODAyMTk2Mw@@._V1_FMjpg_UX1000_.jpg">
+       <img class="movie-cover" src="/api/user/movie/<%= details.coverImage %>">
        <div class="mt-3 justify-content-center d-flex">
         <form method="post">
             <button type="submit" class="follow-button btn btn-primary">
@@ -13,16 +13,16 @@
        <table class="movie-details-table">
           <tr>
              <td class="table-cell-alt"><div class="movie-details-label">Name</div></td>
-             <td  class="table-cell"><div>Dark Knight</div></td>
+             <td  class="table-cell"><div><%= details.name %></div></td>
           </tr>
           <tr>
              <td class="table-cell-alt"><div class="movie-details-label">Favourite Genre</div></td>
-             <td class="table-cell"><div>10/10/2009</div></td>
+             <td class="table-cell"><div><%= details.favouriteGenre %></div></td>
  
           </tr>
           <tr>
              <td class="table-cell-alt"><div class="movie-details-label">Bio</div></td>
-             <td class="table-cell"><div>Great Man</div></td>
+             <td class="table-cell"><div><%= details.bio %></div></td>
  
           </tr>
        </table>
@@ -34,8 +34,8 @@
  <div>
     <h2>Movies by Director</h2>
     <div class="grid-container-small">
-       <% for(let i=0; i<5; i++) { %>
-         <a href="#"><img class="director-movie movie-cover-small" src="https://i.pinimg.com/originals/d8/b6/f4/d8b6f4918c3d0e6ebc8440f8ab6c58a2.jpg"></a>
-       <% } %>
+       <% details.movies.forEach((movie) => { %>
+         <a href="/api/user/movie/<%= movie.id %>"><img class="director-movie movie-cover-small" src="/api/images/<%= movie.coverImage %>"></a>
+       <% }) %>
     </div>
  </div>
