--- a/src/views/users/showMovie.ejs
+++ b/src/views/users/showMovie.ejs
@@ -1,6 +1,6 @@
 <div class="mt-5 d-flex justify-content-evenly">
     <div>
-       <img class="movie-cover" src="https://m.media-amazon.com/images/M/MV5BMTMxNTMwODM0NF5BMl5BanBnXkFtZTcwODAyMTk2Mw@@._V1_FMjpg_UX1000_.jpg">
+       <img class="movie-cover" src="/api/user/movie/<%= details.coverImage %>">
        <div class="mt-3 justify-content-center d-flex">
           <button type="button" class="btn-movie btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
              Add a Review
@@ -11,29 +11,29 @@
        <table class="movie-details-table">
           <tr>
              <td class="table-cell-alt"><div class="movie-details-label">Title</div></td>
-             <td  class="table-cell"><div>Dark Knight</div></td>
+             <td  class="table-cell"><div><%= details.title %></div></td>
           </tr>
           <tr>
              <td class="table-cell-alt"><div class="movie-details-label">Release Date</div></td>
-             <td class="table-cell"><div>10/10/2009</div></td>
+             <td class="table-cell"><div><%= details.releaseDate %></div></td>
  
           </tr>
           <tr>
              <td class="table-cell-alt"><div class="movie-details-label">Runtime</div></td>
-             <td class="table-cell"><div>120</div></td>
+             <td class="table-cell"><div><%= details.runtime %></div></td>
           </tr>
           <tr>
              <td class="table-cell-alt"><div class="movie-details-label">Genre</div></td>
-             <td class="table-cell"><div>Crime</div></td>
+             <td class="table-cell"><div><%= details.genre %></div></td>
           </tr>
           <tr>
              <td class="table-cell-alt"><div class="movie-details-label">Description</div></td>
-             <td class="table-cell"><div>Very nice movie. Has good potential Hsbh as dasj ashdjak dhaskdh askjhsdjahs hasdja dahjdh asjdh as </div></td>
+             <td class="table-cell"><div><%= details.description %></div></td>
  
           </tr>
           <tr>
              <td class="table-cell-alt"><div class="movie-details-label">Rating</div></td>
-             <td class="table-cell"><div>5</div></td>
+             <td class="table-cell"><div><%= details.rating %></div></td>
           </tr>
        </table>
     </div>
@@ -51,13 +51,11 @@
                <button type="button" data-bs-target="#carouselCast" data-bs-slide-to="1"></button>
              </div>
              <div class="carousel-inner">
-               <div class="carousel-item active">
-                 <a href="#"><img src="https://m.media-amazon.com/images/M/MV5BMTMxNTMwODM0NF5BMl5BanBnXkFtZTcwODAyMTk2Mw@@._V1_FMjpg_UX1000_.jpg" 
-                   class="d-block movie-cover" alt="..."></a>
-               </div>
-               <div class="carousel-item">
-                 <a href="#"><img src="https://i.pinimg.com/originals/d8/b6/f4/d8b6f4918c3d0e6ebc8440f8ab6c58a2.jpg" class="d-block movie-cover" alt="..."></a>
-               </div>
+              <% for (let i = 0; i < details.cast.length; i++) { %>
+                <div class="carousel-item <% if (i === 0) { %> active <% } %>">
+                   <a href="/api/admin/actor/<%= details.cast[i].id %>"><img src="/api/images/<%= details.cast[i].coverImage %>" class="d-block movie-cover" alt="..."></a>
+                </div>
+             <% } %>
              </div>
              <button class="carousel-control-prev" type="button" data-bs-target="#carouselCast" data-bs-slide="prev">
                <span class="carousel-control-prev-icon"></span>
@@ -72,7 +70,7 @@
     </div>
     <div>
        <h2>Director</h2>
-       <a href="#"><img class="mt-4 movie-cover" src="https://m.media-amazon.com/images/M/MV5BMTMxNTMwODM0NF5BMl5BanBnXkFtZTcwODAyMTk2Mw@@._V1_FMjpg_UX1000_.jpg"></a>
+       <a href="/api/admin/director/<%= details.director.id %>"><img class="mt-4 movie-cover" src="/api/images/<%= details.director.coverImage %>"></a>
     </div>
  </div>
  <hr class="mt-5 mb-5">
@@ -80,27 +78,15 @@
  <!-- reviews -->
  <h2>Reviews</h2>
  <ul class="mt-3 list-group">
-    <li class="list-group-item d-flex justify-content-between align-items-start">
-      <div class="ms-2 me-auto">
-        <div class="fw-bold">Subheading</div>
-        Cras justo odio
-      </div>
-      <span class="badge bg-primary rounded-pill">5</span>
-    </li>
-    <li class="list-group-item d-flex justify-content-between align-items-start">
-      <div class="ms-2 me-auto">
-        <div class="fw-bold">Subheading</div>
-        Cras justo odio
-      </div>
-      <span class="badge bg-primary rounded-pill">4</span>
-    </li>
-    <li class="list-group-item d-flex justify-content-between align-items-start">
-      <div class="ms-2 me-auto">
-        <div class="fw-bold">Subheading</div>
-        Cras justo odio
-      </div>
-      <span class="badge bg-primary rounded-pill">3</span>
-    </li>
+    <% for (let i = 0; i < details.reviews.length; i++) { %>
+      <li class="list-group-item d-flex justify-content-between align-items-start">
+         <div class="ms-2 me-auto">
+            <div class="fw-bold"><%= details.reviews[i].name %></div>
+            <div><%= details.reviews[i].review %></div>
+         </div>
+         <span class="badge bg-primary rounded-pill"><%= details.reviews[i].rating %></span>
+      </li>
+   <% } %>
  </ul>
  
  <!-- review modal -->
