top movies view done

--- a/src/public/styles/main.css
+++ b/src/public/styles/main.css
@@ -7,6 +7,7 @@
 @import './shared/adminShowMovie.css';
 @import './shared/userFollow.css';
 @import './shared/genreAccordion.css';
+@import './shared/topMovie.css';
 
 *,
 *::before,
