--- a/src/views/partials/headerHome.ejs
+++ b/src/views/partials/headerHome.ejs
@@ -20,6 +20,8 @@
 		<li class="nav-item dropdown">
 			<a class=" header-nav-item nav-link dropdown-toggle" data-bs-toggle="dropdown">All</a>
 			<ul class="dropdown-menu">
+			  <li><a class="dropdown-item" href="/user/movie/top">Top Movies</a></li>
+			  <li><hr class="dropdown-divider"></li>
 			  <li><a class="dropdown-item" href="/user/actors">Actors</a></li>
 			  <li><a class="dropdown-item" href="/user/directors">Directors</a></li>
 			  <li><a class="dropdown-item" href="/user/genres">Genre</a></li>
