did some integration

--- a/src/views/admin/movie.ejs
+++ b/src/views/admin/movie.ejs
@@ -25,7 +25,7 @@
 			</div>
 			<div class="collapse text-primary mt-3" id="collapse<%= movie.id %>">
 				<div class="card-body">
-					Director: <%= movie.director %>
+					Director: <%= movie.director.name %>
 					<br />
 					Rating: <%= movie.rating %>
 				</div>
