--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -1,5 +1,5 @@
 <main class="form-signin">
-	<form action="/api/login" method="POST">
+	<form action="/auth/login" method="POST">
 		<h1 class="mb-4">Movie Logger</h1>
 		<div class="form-floating">
 			<input
@@ -46,7 +46,7 @@
 			Sign in
 		</button>
 		<div>
-			<a href="/register">New User? Register Here</a>
+			<a href="/auth/register">New User? Register Here</a>
 		</div>
 		<p class="mt-5 mb-3 text-muted">&copy; 2021</p>
 	</form>
