--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -1,5 +1,5 @@
 <main class="form-signin">
-	<form action="/api/register" method="POST">
+	<form action="/auth/register" method="POST">
 		<h1 class="mb-4">Movie Logger</h1>
 		<div class="form-floating">
 			<input
@@ -66,7 +66,7 @@
 			Register
 		</button>
 		<div>
-			<a href="/login">Registered Already? Sign In</a>
+			<a href="/auth/login">Registered Already? Sign In</a>
 		</div>
 		<p class="mt-5 mb-3 text-muted">&copy; 2021</p>
 	</form>
