Full Integration except reviews

--- a/src/views/admin/actor.ejs
+++ b/src/views/admin/actor.ejs
@@ -21,12 +21,12 @@
 				>
 					See More
 				</button>
-				<a href="/api/admin/actor/<%= actor.id %>" class="btn btn-primary">Actor Page</a>
+				<a href="/api/admin/actor/show/<%= actor.id %>" class="btn btn-primary">Actor Page</a>
 			</div>
 			<div class="collapse text-primary mt-3" id="collapse<%= actor.id %>">
 				<div class="card-body">
 					Age: <%= actor.age %>
-					Best Movie: <%= actor.bestMovie %>
+					<!-- Best Movie: Best Movie -->
 				</div>
 			</div>
 		</div>
