--- a/src/views/admin/movie.ejs
+++ b/src/views/admin/movie.ejs
@@ -21,7 +21,7 @@
 				>
 					See More
 				</button>
-				<a href="/api/admin/movie/<%= movie.id %>" class="btn btn-primary">Movie Page</a>
+				<a href="/api/admin/movie/show/<%= movie.id %>" class="btn btn-primary">Movie Page</a>
 			</div>
 			<div class="collapse text-primary mt-3" id="collapse<%= movie.id %>">
 				<div class="card-body">
