--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -37,7 +37,7 @@
 				class="form-control"
 				id="floatingPassword-2"
 				placeholder="Password"
-				name="password"
+				name="cpassword"
 			/>
 			<label for="floatingPassword-2">Confirm Password</label>
 		</div>
