--- a/src/views/admin/showDirector.ejs
+++ b/src/views/admin/showDirector.ejs
@@ -36,7 +36,7 @@
     <h2>Movies by Director</h2>
     <div class="grid-container-small">
        <% details.movies.forEach((movie) => { %>
-         <a href="#"><img class="director-movie movie-cover-small" src="/api/images/<%= movie.coverImage %>"></a>
+         <a href="/api/admin/movie/show/<%= movie._id %>"><img class="director-movie movie-cover-small" src="/api/images/<%= movie.coverImage %>"></a>
        <% }) %>
     </div>
  </div>
