--- a/src/views/admin/showMovie.ejs
+++ b/src/views/admin/showMovie.ejs
@@ -27,7 +27,7 @@
          </tr>
          <tr>
             <td class="table-cell-alt"><div class="movie-details-label">Genre</div></td>
-            <td class="table-cell"><div><%= details.genre %></div></td>
+            <td class="table-cell"><div><%= details.genre.name %></div></td>
          </tr>
          <tr>
             <td class="table-cell-alt"><div class="movie-details-label">Description</div></td>
@@ -56,7 +56,7 @@
             <div class="carousel-inner">
                <% for (let i = 0; i < details.cast.length; i++) { %>
                   <div class="carousel-item <% if (i === 0) { %> active <% } %>">
-                     <a href="/api/admin/actor/<%= details.cast[i].id %>"><img src="/api/images/<%= details.cast[i].coverImage %>" class="d-block movie-cover" alt="..."></a>
+                     <a href="/api/admin/actor/show/<%= details.cast[i].id %>"><img src="/api/images/<%= details.cast[i].coverImage %>" class="d-block movie-cover" alt="..."></a>
                   </div>
                <% } %>
             </div>
@@ -73,7 +73,7 @@
    </div>
    <div>
       <h2>Director</h2>
-      <a href="/api/admin/director/<%= details.director.id %>"><img class="mt-4 movie-cover" src="/api/images/<%= details.director.coverImage %>"></a>
+      <a href="/api/admin/director/show/<%= details.director.id %>"><img class="mt-4 movie-cover" src="/api/images/<%= details.director.coverImage %>"></a>
    </div>
 </div>
 <hr class="mt-5 mb-5">
@@ -82,14 +82,14 @@
 <h2>Reviews</h2>
 <ul class="mt-3 list-group">
    <% for (let i = 0; i < details.reviews.length; i++) { %>
-      <li class="list-group-item d-flex justify-content-between align-items-start">
-         <div class="ms-2 me-auto">
-            <div class="fw-bold"><%= details.reviews[i].name %></div>
-            <div><%= details.reviews[i].review %></div>
-         </div>
-         <span class="badge bg-primary rounded-pill"><%= details.reviews[i].rating %></span>
-      </li>
-   <% } %>
+     <li class="list-group-item d-flex justify-content-between align-items-start">
+        <div class="ms-2 me-auto">
+           <div class="fw-bold"><%= details.reviews[i].name %></div>
+           <div><%= details.reviews[i].review %></div>
+        </div>
+        <span class="badge bg-primary rounded-pill"><%= details.reviews[i].rating %></span>
+     </li>
+  <% } %>
 </ul>
 
 <!-- delete modal -->
