--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,23 +1,23 @@
 <div class="header-nav mt-5 mb-5 d-flex flex-wrap justify-content-between align-items-center">
 	<h1>Movie Logger</h1>
 	<nav class="nav nav-pills nav-fill">
-		<a class="header-nav-item nav-link active" href="/user/home">Home</a>
+		<a class="header-nav-item nav-link active" href="/api/user/movie/home">Home</a>
 		<li class="nav-item dropdown">
 			<a class=" header-nav-item nav-link dropdown-toggle" data-bs-toggle="dropdown">All</a>
 			<ul class="dropdown-menu">
-			  <li><a class="dropdown-item" href="/user/movie/top">Top Movies</a></li>
+			  <li><a class="dropdown-item" href="/api/user/movie/top">Top Movies</a></li>
 			  <li><hr class="dropdown-divider"></li>
-			  <li><a class="dropdown-item" href="/user/actors">Actors</a></li>
-			  <li><a class="dropdown-item" href="/user/directors">Directors</a></li>
-			  <li><a class="dropdown-item" href="/user/genres">Genre</a></li>
+			  <li><a class="dropdown-item" href="/api/user/actor/all">Actors</a></li>
+			  <li><a class="dropdown-item" href="/api/user/director/all">Directors</a></li>
+			  <li><a class="dropdown-item" href="/api/user/genre/all">Genre</a></li>
 			</ul>
 		  </li>
 		<li class="nav-item dropdown">
 			<a class=" header-nav-item nav-link dropdown-toggle" data-bs-toggle="dropdown">Following</a>
 			<ul class="dropdown-menu">
-			  <li><a class="dropdown-item" href="/user/following/actors">Actors</a></li>
-			  <li><a class="dropdown-item" href="/user/following/directors">Directors</a></li>
-			  <li><a class="dropdown-item" href="/user/following/genres">Genre</a></li>
+			  <li><a class="dropdown-item" href="/api/user/following/actors">Actors</a></li>
+			  <li><a class="dropdown-item" href="/api/user/following/directors">Directors</a></li>
+			  <li><a class="dropdown-item" href="/api/user/following/genres">Genre</a></li>
 			</ul>
 		  </li>
 		<a class="header-nav-item nav-link" href="/user/reviews">Reviews</a>
