--- a/src/views/users/actor.ejs
+++ b/src/views/users/actor.ejs
@@ -17,12 +17,16 @@
 		<div class="text-center card-body">
 			<h5 class="card-title movie-title"><%= actor.name %></h5>
 			<div class="follow-grid">
-				<form method="post">
-					<button type="submit" class="follow-button btn btn-primary">
-						Follow
+				<form action="/api/user/follow/actor/<%= actor.id %>/isAll?_method=PUT" method="post">
+					<button type="submit" class="follow-button btn btn-primary <% if (actor.isfollowing) { %> following <% } %>">
+						<% if (actor.isfollowing) { %>
+							Following
+						<% } else { %>
+						    Follow
+						<% } %>
 					</button>
 				</form>
-				<a href="/api/user/actor/<%= actor.id %>" class="btn btn-primary">Actor Page</a>
+				<a href="/api/user/actor/show/<%= actor.id %>" class="btn btn-primary">Actor Page</a>
 			</div>
 		</div>
 	</div>
