--- a/src/views/users/director.ejs
+++ b/src/views/users/director.ejs
@@ -10,22 +10,26 @@
 	<% details.forEach((director) => { %>
 	<div class="movie-card card">
 		<img
-			src="<%= /api/images/<%= director.coverImage %>"
+			src="/api/images/<%= director.coverImage %>"
 			class="card-img-top"
 			alt="..."
 		/>
 		<div class="text-center card-body">
 			<h5 class="card-title movie-title"><%= director.name %></h5>
 			<div class="follow-grid">
-				<form method="post">
-					<button type="submit" class="follow-button btn btn-primary">
-						Follow
+				<form action="/api/user/follow/director/<%= director.id %>/isAll?_method=PUT" method="post">
+					<button type="submit" class="follow-button btn btn-primary <% if (director.isfollowing) { %> following <% } %>">
+						<% if (director.isfollowing) { %>
+							Following
+						<% } else { %>
+						    Follow
+						<% } %>
 					</button>
 				</form>
-				<a href="/api/user/director/<%= director.id %>" class="btn btn-primary">Director Page</a>
+				<a href="/api/user/director/show/<%= director.id %>" class="btn btn-primary">Director Page</a>
 			</div>
 		</div>
 	</div>
-	<% } %>
+	<% }) %>
 </div>
 
