--- a/src/views/users/followingDirectors.ejs
+++ b/src/views/users/followingDirectors.ejs
@@ -2,12 +2,14 @@
 <div class="grid-container-small">
     <% details.forEach((director) => { %>
         <div>
-            <a href="/api/user/director/<%= director.id %>"><img class="director-movie movie-cover" src="/api/images/<%= director.coverImage %>"></a>
-            <form class="mt-4 d-flex justify-content-center" method="post">
-                <button type="submit" class="follow-button btn btn-primary">
-                    Unfollow
-                </button>
-            </form>
+            <a href="/api/user/director/show/<%= director.id %>"><img class="director-movie movie-cover" src="/api/images/<%= director.coverImage %>"></a>
+            <div class="mt-3 d-flex justify-content-center">
+                <form action="/api/user/follow/director/<%= director.id %>/isFollow?_method=PUT" method="post">
+                    <button type="submit" class="follow-button btn btn-primary">
+                        Unfollow
+                    </button>
+                </form>
+            </div>
         </div>
     <% }) %>
 </div>
