--- a/src/views/users/genre.ejs
+++ b/src/views/users/genre.ejs
@@ -10,14 +10,20 @@
         </h2>
         <div id="collapse<%= genre.id %>" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
           <div class="accordion-body">
-            <form class="d-flex justify-content-center" method="post">
-              <button type="submit" class="mt-3 follow-button btn btn-primary">
-                Follow
-              </button>
-            </form>
+            <div class="d-flex justify-content-center">
+              <form action="/api/user/follow/genre/<%= genre.id %>/isAll?_method=PUT" method="post">
+                <button type="submit" class="follow-button btn btn-primary <% if (genre.isfollowing) { %> following <% } %>">
+                  <% if (genre.isfollowing) { %>
+                    Following
+                  <% } else { %>
+                      Follow
+                  <% } %>
+                </button>
+              </form>
+            </div>
             <div class="grid-container-small">
               <% genre.movies.forEach((movie) => { %>
-                <a href="/api/user/movie/<%= movie.id %>"><img class="director-movie movie-cover-small" src="/api/images/<%= movie.coverImage %>"></a>
+                <a href="/api/user/movie/show/<%= movie.id %>"><img class="director-movie movie-cover-small" src="/api/images/<%= movie.coverImage %>"></a>
               <% }) %>
             </div>
          </div>
