--- a/src/views/users/showActor.ejs
+++ b/src/views/users/showActor.ejs
@@ -2,11 +2,15 @@
     <div>
        <img class="movie-cover" src="/api/user/movie/<%= details.coverImage %>">
        <div class="mt-3 justify-content-center d-flex">
-        <form method="post">
-            <button type="submit" class="follow-button btn btn-primary">
-                Follow
+         <form action="/api/user/follow/actor/<%= details.id %>/isNotAll?_method=PUT" method="post">
+            <button type="submit" class="follow-button btn btn-primary <% if (details.isfollowing) { %> following <% } %>">
+               <% if (details.isfollowing) { %>
+                  Following
+               <% } else { %>
+                   Follow
+               <% } %>
             </button>
-        </form>
+         </form>
        </div>
     </div>
     <div class="movie-details-grid align-self-center">
@@ -35,7 +39,7 @@
     <h2>Movies by Actor</h2>
     <div class="grid-container-small">
        <% details.movies.forEach((movie) => { %>
-         <a href="/api/user/movie/<%= movie.id %>"><img class="director-movie movie-cover-small" src="/api/images/<%= movie.coverImage %>"></a>
+         <a href="/api/user/movie/show/<%= movie.id %>"><img class="director-movie movie-cover-small" src="/api/images/<%= movie.coverImage %>"></a>
        <% }) %>
     </div>
  </div>
