image route integration

--- a/src/views/users/home.ejs
+++ b/src/views/users/home.ejs
@@ -6,7 +6,7 @@
 		<div class="movie-card card">
 			<img
 				src="/api/images/<%= movie.coverImage %>"
-				class="card-img-top"
+				class="card-img-top movie-cover"
 				alt="..."
 			/>
 			<div class="text-center card-body">
