--- a/src/views/admin/movie.ejs
+++ b/src/views/admin/movie.ejs
@@ -8,7 +8,7 @@
 	<div class="movie-card card">
 		<img
 			src="/api/images/<%= movie.coverImage %>"
-			class="card-img-top"
+			class="card-img-top image-card"
 			alt="..."
 		/>
 		<div class="text-center card-body">
