--- a/src/views/partials/headerHome.ejs
+++ b/src/views/partials/headerHome.ejs
@@ -35,7 +35,7 @@
 			  <li><a class="dropdown-item" href="/api/user/following/genres">Genre</a></li>
 			</ul>
 		  </li>
-		<a class="header-nav-item nav-link" href="/user/reviews">Reviews</a>
+		<a class="header-nav-item nav-link" href="/api/user/review/all">Reviews</a>
 	</nav>
 </div>
 
