--- a/src/views/users/showActor.ejs
+++ b/src/views/users/showActor.ejs
@@ -1,6 +1,6 @@
 <div class="mt-5 d-flex justify-content-evenly">
     <div>
-       <img class="movie-cover" src="/api/user/movie/<%= details.coverImage %>">
+       <img class="movie-cover" src="/api/images/<%= details.coverImage %>">
        <div class="mt-3 justify-content-center d-flex">
          <form action="/api/user/follow/actor/<%= details.id %>/isNotAll?_method=PUT" method="post">
             <button type="submit" class="follow-button btn btn-primary <% if (details.isfollowing) { %> following <% } %>">
