--- a/src/views/users/showMovie.ejs
+++ b/src/views/users/showMovie.ejs
@@ -1,6 +1,6 @@
 <div class="mt-5 d-flex justify-content-evenly">
     <div>
-       <img class="movie-cover" src="/api/user/movie/<%= details.coverImage %>">
+       <img class="movie-cover" src="/api/images/<%= details.coverImage %>">
        <div class="mt-3 justify-content-center d-flex">
           <button type="button" class="btn-movie btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
              Add a Review
@@ -97,7 +97,7 @@
           <h5 class="modal-title" id="exampleModalLabel">Add a Review</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <form>
+        <form action="/api/user/movie/review/<%= details.id %>" method="POST">
         <div class="modal-body">
                 <div class="form-group">
                 <label for="exampleFormControlInput1">Rating</label>
